panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__test_error_invalid_operand_in_unary_operator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/test_error_invalid_operand_in_unary_operator.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unary not operator expects a scalar value as operand
   ╭─[panko/tests/cases/test_error_invalid_operand_in_unary_operator.c:4:9]
   │
 4 │     !   f();
   │     ─────┬─  
   │          ╰─── this is of type `void`
───╯
