panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__test_error_unterminated_char_constant.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/test_error_unterminated_char_constant.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unterminated character constant
   ╭─[panko/tests/cases/test_error_unterminated_char_constant.c:4:13]
   │
 4 │     putchar('a);
   │             ─────  
───╯
